<resources>
    <string name="app_name">TeamScheduler</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="Calendar">Calendar</string>
    <string name="UserList">user_list_item</string>
    <string name="Users">All Users</string>
    <string name="option1">mainmenu1</string>
    <string name="option2">mainmenu2</string>
    <string name="Positions">Positions</string>
    <string name="Locations">Locations</string>
    <string name="Teams">Teams</string>
    <string name="Schedules">Schedules</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_lol">Map</string>
</resources>
