<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/user_list_view"
            android:title="@string/Users"
            android:icon="@drawable/users">
        </item>
        <item android:id="@+id/calendar_view"
            android:title="@string/Calendar"
            android:icon="@drawable/calendar">
        </item>
        <item android:id="@+id/schedule_view"
            android:title="@string/Schedules"
            android:icon="@drawable/schedule">
        </item>
        <item android:id="@+id/positions_view"
            android:title="@string/Positions"
            android:icon="@drawable/positions">
        </item>
        <item android:id="@+id/location_view"
            android:title="@string/Locations"
            android:icon="@drawable/location">
        </item>
        <item android:id="@+id/team_view"
            android:title="@string/Teams"
            android:icon="@drawable/team">
        </item>


    </group>

</menu>